MAGETWO-37594: Implementation and fixes after review
- Added scrollbar appearing compensation
- Modified dialogs action close active state

--- a/app/design/adminhtml/Magento/backend/web/css/source/_structure.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/_structure.less
@@ -11,6 +11,8 @@
 //  Variables
 //  ---------------------------------------------
 
+@window__min-width: 1024px;
+
 @body__background-color: @color-white-smoke;
 
 @page-wrapper__indent-left: @menu__width;
@@ -29,7 +31,7 @@ body {
 
 .page-wrapper {
     background-color: @page-wrapper__background-color;
-    min-width: 102.4rem;
+    min-width: @window__min-width;
     padding-left: @page-wrapper__indent-left;
 }
 
@@ -44,6 +46,14 @@ body {
     margin: 0 3rem;
     .messages {
         margin-bottom: 0;
+    }
+}
+
+//  Scroll bar appearing compensation
+@media (min-width: @window__min-width) {
+    html {
+        width: 100vw;
+        overflow-x: hidden;
     }
 }
 
